View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026203 | Open CASCADE | OCCT:Foundation Classes | public | 2015-05-08 13:51 | 2015-10-23 20:51 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | feature | ||
Status | closed | Resolution | fixed | ||
Target Version | 6.9.1 | Fixed in Version | 6.9.1 | ||
Summary | 0026203: Foundation Classes - provide method ::Swap() for NCollection_IndexedMap and NCollection_IndexedDataMap | ||||
Description | It is necessary to implement the ability to transpose elements in the NCollection_IndexedMap. | ||||
Steps To Reproduce | # performs test for correctness and performance pload ALL pload QAcommands QANTestNCollectionIndexedMap | ||||
Tags | No tags attached. | ||||
Test case number | perf ncollection A2, A3 | ||||
|
Branch CR26203 has been created by dbp. SHA-1: 6ba4138bad509bc60a3e1d6f69b041ff98b2420d Detailed log of new commits: Author: dbp Date: Fri May 8 14:22:49 2015 +0300 0026203: Foundation Classes - Provide NCollection_IndexedMap::Swap to transpose map elements |
|
Dear abv, please review the patch in branch CR26203. |
|
Branch CR26203 has been updated forcibly by dbp. SHA-1: 2b01570f8afb87b20958cbc2b502662b323680a6 |
|
Branch CR26203 has been updated forcibly by dbp. SHA-1: 3f803c24b8190a8b356c9909bd225f85ec47211d |
|
No remarks, please test. For testing, please add new tests making calls to all functions defined in QANcollection_Stl.cxx. I believe test grid perf/ncollection is optimal place to put this (now it contains single test calling only one of these commands). |
|
Branch CR26203 has been updated by apv. SHA-1: 2b7880a80ada5d9654462e2d9c6b7c2432d50f99 Detailed log of new commits: Author: apv Date: Wed May 13 15:20:56 2015 +0300 Add new tests in group "perf ncollection" |
|
Branch CR26203 has been updated by apv. SHA-1: 159fac6e13dea5bd0abd990ea290b2a233e41f94 Detailed log of new commits: Author: apv Date: Wed May 13 15:24:17 2015 +0300 Update of test-case perf ncollection A4 |
|
Dear dbp, please review test-cases perf ncollection A3, A4 Dear abv, please review test-case perf ncollection A2 |
|
Andrey, please avoid using commands dlog and decho inside test scripts. In test A2 you only need to call QANTestStlIterators and add line like this in parse.rules to get fails reported: FAILED /FAIL/ operation error Note that test A2 is not related to performance, it can be better put to bugs/fclasses. Please also add other test commands found in QANCollection_Stl.cxx |
|
Branch CR26203 has been updated by dbp. SHA-1: fbee05131f1597f725bd1419a062864984fba943 Detailed log of new commits: Author: dbp Date: Thu May 14 11:47:49 2015 +0300 Fix bug in Swap methods (NCollection_IndexedMap/NCollection_IndexedDataMap). |
|
Dear apv, I have no other remarks on test cases (perf ncollection A3, A4). Please note that branch was updated: we found potential issue and elimated it. So, it is better to get updated performance results. |
|
Branch CR26203 has been updated forcibly by apv. SHA-1: 700ba23e63a385db4bdc86a6505673be81819db7 |
|
Branch CR26203 has been rebased on the current master |
|
Dear BugMaster, Branch CR26203 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 700ba23e63a385db4bdc86a6505673be81819db7 Number of compiler warnings: occt component: Linux: 18 (18 on master) Windows: 0 (0 on master) products component: Linux: 4 (4 on master) Windows: 0 (0 on master) Regressions/Differences: Not detected Testing cases: perf ncollection A2 - OK http://occt-tests/CR26203-master-occt-64/Debian70-64/perf/ncollection/A2.html http://occt-tests/CR26203-master-occt-64/Windows-64-VC10/perf/ncollection/A2.html perf ncollection A3 - OK http://occt-tests/CR26203-master-occt-64/Debian70-64/perf/ncollection/A3.html http://occt-tests/CR26203-master-occt-64/Windows-64-VC10/perf/ncollection/A3.html Testing on Linux: Total MEMORY difference: 95654928 / 100060705 [-4.40%] Total CPU difference: 19016.160000001375 / 19252.430000000175 [-1.23%] Testing on Windows: Total MEMORY difference: 59104923 / 59318564 [-0.36%] Total CPU difference: 17011.300646098978 / 17014.23346489895 [-0.02%] |
|
Branch CR26203_1 has been created by kgv. SHA-1: 0eae7b4bb65edbaccad1b69114b7685abeea4fba Detailed log of new commits: Author: dbp Date: Mon May 18 15:36:23 2015 +0300 0026203: Foundation Classes - provide method ::Swap() for NCollection_IndexedMap::Swap() and NCollection_IndexedDataMap to transpose map elements Add new tests in group "perf ncollection". |
|
Please use branch CR26203_1 for integration (the same as CR26203 with squashed commits and updated description - nothing to re-test). |
|
Branch CR26203_1 has been updated forcibly by kgv. SHA-1: ae4dcb25718be4a01b25100dbb1a5e8058527f08 |
|
Branch CR26203 has been deleted by kgv. SHA-1: 700ba23e63a385db4bdc86a6505673be81819db7 |
|
Branch CR26203_1 has been deleted by kgv. SHA-1: ae4dcb25718be4a01b25100dbb1a5e8058527f08 |
occt: master 9e506120 2015-05-18 12:42:30
Committer: bugmaster Details Diff |
0026203: Foundation Classes - provide method ::Swap() for NCollection_IndexedMap and NCollection_IndexedDataMap to transpose map elements Add new tests in group "perf ncollection". |
Affected Issues 0026203 |
|
mod - src/NCollection/NCollection_IndexedDataMap.hxx | Diff File | ||
mod - src/NCollection/NCollection_IndexedMap.hxx | Diff File | ||
mod - src/QANCollection/QANCollection_Stl.cxx | Diff File | ||
add - tests/bugs/fclasses/bug24831 | Diff File | ||
add - tests/perf/ncollection/A2 | Diff File | ||
add - tests/perf/ncollection/A3 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-05-08 13:51 |
|
New Issue | |
2015-05-08 13:51 |
|
Assigned To | => dbp |
2015-05-08 14:23 | git | Note Added: 0040779 | |
2015-05-08 14:29 |
|
Note Added: 0040780 | |
2015-05-08 14:29 |
|
Assigned To | dbp => abv |
2015-05-08 14:29 |
|
Status | new => resolved |
2015-05-08 14:29 |
|
Steps to Reproduce Updated | |
2015-05-08 14:57 | git | Note Added: 0040781 | |
2015-05-08 15:41 | kgv | Severity | minor => feature |
2015-05-08 16:33 | git | Note Added: 0040799 | |
2015-05-12 13:55 |
|
Note Added: 0040825 | |
2015-05-12 13:55 |
|
Assigned To | abv => bugmaster |
2015-05-12 13:55 |
|
Status | resolved => reviewed |
2015-05-12 17:33 |
|
Assigned To | bugmaster => apv |
2015-05-13 15:21 | git | Note Added: 0040855 | |
2015-05-13 15:22 |
|
Test case number | => perf ncollection A3, A4 |
2015-05-13 15:24 | git | Note Added: 0040856 | |
2015-05-13 15:26 |
|
Note Added: 0040857 | |
2015-05-13 15:26 |
|
Assigned To | apv => dbp |
2015-05-13 15:26 |
|
Status | reviewed => feedback |
2015-05-13 16:03 |
|
Note Added: 0040858 | |
2015-05-13 16:11 |
|
Note Edited: 0040858 | |
2015-05-14 11:47 | git | Note Added: 0040882 | |
2015-05-14 11:51 |
|
Note Added: 0040883 | |
2015-05-14 11:51 |
|
Assigned To | dbp => apv |
2015-05-14 11:51 |
|
Status | feedback => reviewed |
2015-05-15 16:43 | git | Note Added: 0041183 | |
2015-05-15 16:45 |
|
Note Added: 0041184 | |
2015-05-15 16:46 |
|
Test case number | perf ncollection A3, A4 => perf ncollection A2, A3 |
2015-05-18 12:30 |
|
Note Added: 0041222 | |
2015-05-18 12:30 |
|
Assigned To | apv => bugmaster |
2015-05-18 12:30 |
|
Status | reviewed => tested |
2015-05-18 15:36 | git | Note Added: 0041238 | |
2015-05-18 15:37 | kgv | Note Added: 0041239 | |
2015-05-18 15:41 | kgv | Summary | Foundation Classes - Provide NCollection_IndexedMap::Swap to transpose map elements => Foundation Classes - provide method ::Swap() for NCollection_IndexedMap and NCollection_IndexedDataMap |
2015-05-18 15:42 | git | Note Added: 0041240 | |
2015-05-22 12:19 | bugmaster | Changeset attached | => occt master 9e506120 |
2015-05-22 12:19 | bugmaster | Status | tested => verified |
2015-05-22 12:19 | bugmaster | Resolution | open => fixed |
2015-07-27 13:48 | git | Note Added: 0043546 | |
2015-07-27 13:48 | git | Note Added: 0043547 | |
2015-08-20 09:26 |
|
Relationship added | child of 0026199 |
2015-08-26 11:11 |
|
Target Version | 7.0.0 => 6.9.1 |
2015-10-16 14:56 |
|
Status | verified => closed |
2015-10-23 20:51 |
|
Fixed in Version | => 6.9.1 |